--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/oliusfr/react-native-svg-uri.git"
+    "url": "git+https://github.com/matiascba/react-native-svg-uri.git"
   },
   "keywords": [
     "react-native",
@@ -17,7 +17,7 @@
     "uri",
     "http"
   ],
-  "author": "Louis Cheminant",
+  "author": "Matias Cortes",
   "license": "ISC",
   "dependencies": {
     "xmldom": "^0.1.22"
